--- a/Week 7/Stacks and Queues.ipynb
+++ b/Week 7/Stacks and Queues.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 157,
    "id": "6c98fd93-b9ba-4a2c-9717-a6d4debb6f16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Stack:\n",
+    "class Stack: # stack implementaion using list\n",
     "    def __init__(self, capacity):\n",
     "        self.stack = []\n",
     "        self.capacity = capacity\n",
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 158,
    "id": "8d260c77-4ece-4a08-89fe-ec4fb61e02e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Queue:\n",
+    "class Queue: # queue implementaion using list\n",
     "    def __init__(self, capacity):\n",
     "        self.queue = []\n",
     "        self.capacity = capacity\n",
@@ -66,13 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 159,
    "id": "e1a8a7bb-03cc-4fa1-8294-f0347ad9cb9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import heapq\n",
-    "class PriorityQueue:\n",
+    "class PriorityQueue: # stack implementaion using heapq\n",
     "    def __init__(self, capacity):\n",
     "        self.hqueue = []\n",
     "        self.capacity = capacity\n",
@@ -80,7 +80,7 @@
     "    def enque(self, data, priority):\n",
     "        if self.isFull():\n",
     "            print(f'queue full')\n",
-    "        else:\n",
+    "        else: # seq is used to break priority ties\n",
     "            heapq.heappush(self.hqueue, (priority, self.seq, data))\n",
     "            self.seq += 1\n",
     "    def deque(self):\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 160,
    "id": "e971c987-0105-452e-aed4-882441767496",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 161,
    "id": "49b829c4-7587-455e-a195-a950aabe2f71",
    "metadata": {},
    "outputs": [],
@@ -121,10 +121,13 @@
     "        self.guests = Stack(capacity)\n",
     "        self.prompt = f'Boarding guest'\n",
     "    def step1(self, guest_name, _):\n",
+    "        # wrapper for class method\n",
     "        self.board_guest(guest_name)\n",
     "    def step2(self):\n",
+    "        # wrapper for class method\n",
     "        self.start_ride()\n",
     "    def step3(self):\n",
+    "        # wrapper for class method\n",
     "        self.exit_ride()\n",
     "    def board_guest(self, guest_name):\n",
     "        self.guests.push(guest_name)\n",
@@ -139,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 162,
    "id": "d4458070-c815-49f5-ae65-15a333057355",
    "metadata": {},
    "outputs": [],
@@ -149,10 +152,13 @@
     "        self.guests = Queue(capacity)\n",
     "        self.prompt = f'Boarding guest'\n",
     "    def step1(self, guest_name, _):\n",
+    "        # wrapper for class method\n",
     "        self.join_queue(guest_name)\n",
     "    def step2(self):\n",
+    "        # wrapper for class method\n",
     "        self.start_ride()\n",
     "    def step3(self):\n",
+    "        # wrapper for class method\n",
     "        self.exit_ride()\n",
     "    def join_queue(self, guest_name):\n",
     "        self.guests.enque(guest_name)\n",
@@ -167,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 163,
    "id": "e944911f-7887-4c9b-bcc9-8ab06feefdad",
    "metadata": {},
    "outputs": [],
@@ -178,10 +184,13 @@
     "        self.prompt = f'Enter guest name'\n",
     "        self.has_priority = True\n",
     "    def step1(self, guest_name, priority):\n",
+    "        # wrapper for class method\n",
     "        self.add_guest(guest_name, priority)\n",
     "    def step2(self):\n",
+    "        # wrapper for class method\n",
     "        self.start_ride()\n",
     "    def step3(self):\n",
+    "        # wrapper for class method\n",
     "        pass\n",
     "    def add_guest(self, guest_name, priority):\n",
     "        self.guests.enque(guest_name, priority)\n",
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 164,
    "id": "d60e51a0-86bc-467b-a0f2-93791feb32ad",
    "metadata": {},
    "outputs": [],
@@ -202,7 +211,7 @@
     "    n = 0\n",
     "    print(f'\\nMax capacity: {capacity}')\n",
     "    while True:\n",
-    "        try:\n",
+    "        try: # prompt user to enter guest names\n",
     "            name = input(sim.prompt + f' (<Enter> = Mary{n}, \\'q\\' to quit):')\n",
     "            assert name.replace(\" \", \"\").isalnum() or name == '', 'Alphanumerics or <Enter> please'\n",
     "            if name == 'q':\n",
@@ -212,6 +221,7 @@
     "            print(name)\n",
     "            priority = None\n",
     "            if hasattr(sim, 'has_priority'):\n",
+    "                # if this is a priority queue, need to enter priority\n",
     "                while True:\n",
     "                    try:\n",
     "                        priority = int(input('  Guest priority: '))\n",
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 165,
    "id": "12823283-806b-4e37-a142-2d41461cd1e5",
    "metadata": {},
    "outputs": [],
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 166,
    "id": "12f29354-b400-410d-a209-c34fd9a18837",
    "metadata": {},
    "outputs": [],
@@ -256,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 167,
    "id": "bac9a3b7-5f0b-4327-9c57-2aac03c12ac6",
    "metadata": {},
    "outputs": [],
@@ -268,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 168,
    "id": "cb7c52d6-d5c4-461f-9aac-23192e51d2d6",
    "metadata": {},
    "outputs": [],
@@ -279,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "id": "27572431-aaae-496b-a5eb-495e973a578c",
    "metadata": {},
    "outputs": [
@@ -354,20 +364,131 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Boarding guest (<Enter> = Mary3, 'q' to quit): q\n"
+      "Boarding guest (<Enter> = Mary3, 'q' to quit): \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Mary3\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Boarding guest (<Enter> = Mary4, 'q' to quit): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary4\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Boarding guest (<Enter> = Mary5, 'q' to quit): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary5\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Boarding guest (<Enter> = Mary6, 'q' to quit): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary6\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Boarding guest (<Enter> = Mary7, 'q' to quit): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary7\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Boarding guest (<Enter> = Mary8, 'q' to quit): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary8\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Boarding guest (<Enter> = Mary9, 'q' to quit): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary9\n",
       "Hello there, welcome aboard!\n",
       "Thanks for riding with us.\n",
       "Please exit in reverse order.\n",
+      "See you next time, Mary9.\n",
+      "See you next time, Mary8.\n",
+      "See you next time, Mary7.\n",
+      "See you next time, Mary6.\n",
+      "See you next time, Mary5.\n",
+      "See you next time, Mary4.\n",
+      "See you next time, Mary3.\n",
       "See you next time, Mary2.\n",
       "See you next time, Mary1.\n",
       "See you next time, Mary0.\n",
       "\n",
+      "\n",
+      "1: Elevator ride\n",
+      "2: Roller coaster ride\n",
+      "3: VIP line\n",
+      "q: Quit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please choose a simulation: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid choice!\n",
       "\n",
       "1: Elevator ride\n",
       "2: Roller coaster ride\n",
@@ -553,6 +674,25 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
+      "Please choose a simulation: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid choice!\n",
+      "\n",
+      "1: Elevator ride\n",
+      "2: Roller coaster ride\n",
+      "3: VIP line\n",
+      "q: Quit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "Please choose a simulation: 3\n"
      ]
     },
@@ -582,7 +722,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  Guest priority:  5\n",
+      "  Guest priority:  4\n",
       "Enter guest name (<Enter> = Mary1, 'q' to quit): \n"
      ]
     },
@@ -597,7 +737,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  Guest priority:  3\n",
+      "  Guest priority:  2\n",
       "Enter guest name (<Enter> = Mary2, 'q' to quit): \n"
      ]
     },
@@ -612,7 +752,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  Guest priority:  1\n",
+      "  Guest priority:  6\n",
       "Enter guest name (<Enter> = Mary3, 'q' to quit): \n"
      ]
     },
@@ -627,48 +767,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  Guest priority:  3\n",
-      "Enter guest name (<Enter> = Mary4, 'q' to quit): \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mary4\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "  Guest priority:  3\n",
-      "Enter guest name (<Enter> = Mary5, 'q' to quit): q\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Now boarding guests based on priority\n",
-      "Mary2\n",
-      "Mary1\n",
-      "Mary3\n",
-      "Mary4\n",
-      "Mary0\n",
-      "\n",
-      "\n",
-      "1: Elevator ride\n",
-      "2: Roller coaster ride\n",
-      "3: VIP line\n",
-      "q: Quit\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Please choose a simulation: q\n"
+      "  Guest priority:  2\n"
      ]
     }
    ],
@@ -679,11 +778,13 @@
     "        'q': ('Quit', None)\n",
     "       }\n",
     "while True:\n",
-    "    for m in menu:\n",
+    "    for m in menu: #display menu\n",
     "        print(f'{m}: {menu[m][0]}')\n",
     "    choice = input(f'Please choose a simulation:')\n",
     "    if choice == 'q':\n",
     "        break\n",
+    "    # if valid choice, call the function stored in the 2nd element of the tuple\n",
+    "    # if invalid choice, call invalid_choice()\n",
     "    menu.get(choice, (None, invalid_choice))[1]()"
    ]
   },
